--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,24 @@
       name="hellmutt"
       content="js game hlm"
     />
+
     <!--
+
+			delete this or use
+
+		<style>
+			#storeCover, #extCover-0, 
+			#extCover-1, #extCover-2, 
+			#extCover-3, #extCover-4 {
+				height: 100%;
+				width: 100%;
+				background: rgba(0,0,0,0.3);
+				display: flex;
+				z-index: 10001;
+				position: absolute;
+			}
+		</style>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
