--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />-->
+		<meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#000000" />
+		<script src="./DragDropTouch.js"></script>
     <meta
       name="hellmutt"
       content="js game hlm"
