--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />-->
 		<meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="theme-color" content="#000000" />
-		<script src="./DragDropTouch.js"></script>
+		<script type="text/javascript" src="./DragDropTouch.js"></script>
     <meta
       name="hellmutt"
       content="js game hlm"
